# python3-recorder

./: .enter.sh  .exit.sh  .flake8  .gitignore  README.rst  config.toml  pyproject.toml  recorder.service  requirements.txt
src/recorder/: config.py  main.py  record.py  typem.py  wakeup.py
tools/: pip-upgrade-packages.py
transmitters/: channels-lescars.conf
