[project]
name = "DVB recorder"
dynamic = ["version"]
description = "iHtml page for configuring DVB recordings."
authors = [{ name = "Franck Barbenoire", email = "fbarbenoire@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.13",
    "git+https://github.com/tenproduct/aiohttp_babel.git@master",
    "aiohttp-jinja2==1.6",
    "aiohttp-session==2.12.1",
    "aiohttp_session_flash==0.0.4",
    "aiosignal==1.4.0",
    "Babel==2.17.0",
    "cryptography==45.0.5",
    "Jinja2==3.1.6",
    "pytz==2025.2",
    "speaklater==1.3",
    "WTForms==3.2.1",
]
# license = "GPL-3.0-or-later"
keywords = ["multimedia", "DVB", "television"]

[project.urls]
Homepage = "https://github.com/franckinux/python3-recorder"

[build-system]
requires = ["flit_core >=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
recorder = "recorder.main:main"

[tool.mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
